# vacancy_project

./: README.md  config.py  pyproject.toml
data/: csvsaver.csv  jsonsaver.json  vacancies.json
src/: class_convert_vacancy.py  class_filtered_vacancies.py  class_saver.py  class_with_api.py  class_with_vacancy.py  funcs_for_save.py  main.py  user_interaction.py  utils.py
tests/: test_class_convert_vacancy.py  test_class_saver.py  test_class_with_api.py  test_class_with_vacancy.py  test_filtered_vacancies.py  test_funcs_for_save.py  test_utils.py
